# project-sombra

./: .gitignore  ENV_SETUP.md  PUBLIC_DATA_AND_APPROACH.md  README.md  embedding_model_plan.md  pyproject.toml
data/: sample_pairs.jsonl
docs/: README.md  benchmark_baseline.md  next_iterations.md  progress_log.md
scripts/: benchmark_retrieval.py  check_wsl_gpu.py  download_public_data.py  export_onnx.py  mine_hard_negatives.py  run_v1_pipeline.sh  run_v1_tmux.sh  train_sanity.py  train_tokenizer.py  train_v1.py
